<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddView.AddActivity"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="#ffffff">

            <Button
                android:id="@+id/add_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/add_cancel"
                android:textColor="@drawable/add_title_selector"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/add_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/add_title"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/add_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/add_ok"
                android:textColor="@drawable/add_title_selector"
                android:textSize="12sp"
                tools:targetApi="lollipop" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/add_title_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_detail_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/add_detail_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:layout_gravity="center_vertical"
                    android:gravity="left"
                    android:text="@string/add_all_day"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/add_all_day"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_switch_off"
                    android:gravity="center_vertical"
                    android:stateListAnimator="@null" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:layout_gravity="center_vertical"
                    android:gravity="left"
                    android:text="@string/add_lunar"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:id="@+id/add_lunar"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_switch_off"
                    android:gravity="center_vertical"
                    android:stateListAnimator="@null"
                    tools:targetApi="lollipop" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="left"
                    android:text="@string/add_start"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_start"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="right|center_vertical"
                    android:stateListAnimator="@null"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    tools:targetApi="lollipop" />
            </LinearLayout>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:gravity="center"-->
<!--                android:textSize="18sp"-->
<!--                />-->
<!--            <TimePicker-->
<!--                android:id="@+id/add_time_picker_start"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="128dp"-->
<!--                android:background="#ffffff"-->
<!--                android:timePickerMode="spinner"-->
<!--                android:theme=""/>-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/add_end"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_end"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="right|center_vertical"
                    android:stateListAnimator="@null"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    tools:targetApi="lollipop" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="left"
                    android:text="@string/add_color"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <com.shehuan.niv.NiceImageView
                            android:id="@+id/add_color_image"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_horizontal"
                            app:border_color="#FF7F24"
                            app:border_width="1dp"
                            app:is_circle="true"
                            android:scaleType="centerInside"
                            app:is_cover_src="true"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/add_color"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="3"
                        android:background="#ffffff"
                        android:gravity="right"
                        android:stateListAnimator="@null"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="left"
                    android:text="@string/add_repeat"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_repeat"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="right|center_vertical"
                    android:stateListAnimator="@null"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="left|center_vertical"
                    android:text="@string/add_remind"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_remind"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="right|center_vertical"
                    android:stateListAnimator="@null"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="left"
                    android:text="@string/add_account"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_account"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="right|center_vertical"
                    android:stateListAnimator="@null"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/line_color" />
    </LinearLayout>

</LinearLayout>