<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingView.SettingActivity"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/setting_account"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/setting_account"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="right|center_vertical"
                    android:stateListAnimator="@null"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    tools:targetApi="lollipop"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="left"
                    android:text="@string/setting_color"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <com.shehuan.niv.NiceImageView
                            android:id="@+id/add_color_image"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_horizontal"
                            app:border_color="#FF7F24"
                            app:border_width="1dp"
                            app:is_circle="true"
                            android:scaleType="centerInside"
                            app:is_cover_src="true"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/setting_color"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="3"
                        android:background="#ffffff"
                        android:gravity="right"
                        android:stateListAnimator="@null"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="left"
                    android:text="@string/setting_more"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>
            <ListView
                android:id="@+id/setting_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="#ffffff"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>